--- a/index.html
+++ b/index.html
@@ -34,10 +34,20 @@
             </form>
         </div>
 
+        <div id="weather-announcer">
+            <p id="location">Loading...</p>
+            <p id="temperature">Loading...</p>
+            <p id="weather-description">Loading...</p>
+        </div>
     </main>
     <footer>
 
     </footer>
+    <script src="../bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.2.1/build/global/luxon.min.js"></script>
     <script src="./js/main.js"></script> 
+    
+
+
 </body>
 </html>
