--- a/pages/lift.html
+++ b/pages/lift.html
@@ -83,8 +83,9 @@
                 <div class="modal-body"></div>
             </div>
 
-
-    <script src="../js/main.js"></script>
     <script src="../bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.2.1/build/global/luxon.min.js"></script>
+    <script type="module" src="../js/main.js"></script>
+    
 </body>
 </html>
